--- a/app/views/friendships/_friend_lookup.html.erb
+++ b/app/views/friendships/_friend_lookup.html.erb
@@ -1,15 +1,15 @@
-<h1>My Portfolio</h1>
+<h1>My Friends</h1>
 
-<h3>Search for Stocks</h3>
+<h3>Search for Friends</h3>
 <div id="stock-lookup">
-	<%= form_tag search_stock_path, method: :get, id: "stock-lookup-form" do %>
+	<%= form_tag search_friends_path, method: :get, id: "friend-lookup-form" do %>
 	<div class="form-group row no-padding text-center col-md-12 ">
 		<div class="col-md-10">
-			<%= text_field_tag :stock, params[:stock], placeholder: "Stock ticker symbol", autofocus: true, class: "form-control search-box input-lg" %>
+			<%= text_field_tag :friend, params[:friend], placeholder: "Enter full name or email", autofocus: true, class: "form-control search-box input-lg" %>
 		</div>
 		<div class="col-md-2">
 			<%= button_tag(type: :submit, class: "btn btn-lg btn-success") do %>
-				<i class="fa fa-search"></i> Look up a stock 
+				<i class="fa fa-search"></i> Search 
 			<% end %>
 		</div>
 	</div>
@@ -36,4 +36,3 @@
 		<% end %>
 	</div>
 <% end %>
-<%= render 'stocks/list' %>
