--- a/app/views/friendships/_friend_lookup.html.erb
+++ b/app/views/friendships/_friend_lookup.html.erb
@@ -5,7 +5,7 @@
 	<%= form_tag search_friends_path, method: :get, id: "friend-lookup-form" do %>
 	<div class="form-group row no-padding text-center col-md-12 ">
 		<div class="col-md-10">
-			<%= text_field_tag :friend, params[:friend], placeholder: "Enter full name or email", autofocus: true, class: "form-control search-box input-lg" %>
+			<%= text_field_tag :search_value, params[:search_value], placeholder: "Enter full name or email", autofocus: true, class: "form-control search-box input-lg" %>
 		</div>
 		<div class="col-md-2">
 			<%= button_tag(type: :submit, class: "btn btn-lg btn-success") do %>
@@ -15,24 +15,18 @@
 	</div>
 	<% end %>
 </div>
-<%#= render 'users/result' %>
-<% if @stock %>
-	<div class="well results-block">
-		<strong>Symbol:</strong> <%= @stock.ticker %>
-		<strong>Name:</strong> <%= @stock.name %>
-		<strong>Price:</strong> <%= @stock.last_price %>
-		<% if current_user.can_add_stock?(@stock.ticker) %>
-			<%= link_to "Add Stock", user_stocks_path(user: current_user, stock_ticker: @stock.ticker), class: "btn btn-success", method: :post %>
-		<% else %>
-			<span class="label label-default">
-				Stock can't be added because you have already added
-				<% if !current_user.under_stock_limit? %>
-					10 stocks
+<% if @friends.present? %>
+	<div id="friend-lookup-results" class="well results-block col-md-10">
+		<table class="search_results_table col-md-12">
+			<tbody>
+				<% @friends.each do |friend| %>
+					<tr>
+						<td><strong>Name:</strong> <%= friend.full_name %></td>
+						<td><strong>Mobile:</strong> <%= friend.mobile_number %></td>
+						<td><strong>Email:</strong> <%= friend.email %></td>
+					</tr>
 				<% end %>
-				<% if current_user.stock_already_added?(@stock.ticker) %>
-					this stock
-				<% end %>
-			</span>
-		<% end %>
+			</tbody>
+		</table>
 	</div>
 <% end %>
